--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="luke/favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <script type="text/javascript">
@@ -17,15 +17,15 @@
             }
         }(window.location)
     </script>
-    <link rel="manifest" href="luke/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <title>Busca de filmes</title>
-    <link href="/luke/static/css/main.7b5ea072.css" rel="stylesheet">
+    <link href="static/css/main.7b5ea072.css" rel="stylesheet">
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="/luke/static/js/main.86e75a1c.js"></script>
+    <script type="text/javascript" src="static/js/main.86e75a1c.js"></script>
 </body>
 
 </html>
